# calculator_package_cooper_frank

./: pyproject.toml  tox.ini
calculator_package_cooper_frank/: __main__.py
calculator_package_cooper_frank/file_calculator/: file_calculator.py
calculator_package_cooper_frank/tests/: test_file_calculator.py
scripts/: run.py
